feat: add a JPMS module descriptor (#25)
* feat: add a JPMS module descriptor (io.github.dfa1.zstd)

- module-info.java exports the single public package. Lets modular
  consumers `requires io.github.dfa1.zstd` and scope native access with
  `--enable-native-access=io.github.dfa1.zstd` instead of ALL-UNNAMED.
- Suppress the module-name lint: the `dfa1` component ends in a digit
  (flagged as possibly version-like), but it mirrors the verified
  io.github.dfa1 namespace and the package, so keep it.
- NativeLibrary now loads the bundled library through the class loader
  (no leading slash) rather than Class#getResourceAsStream: the library
  lives in a separate zstd-native-<classifier> module and a named module
  only finds resources in itself. The classifier directory has a dash, so
  it is not a package and the resource is not module-encapsulated — the
  class loader reads it across modules and on the classpath alike.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* docs: changelog + reference.md for the JPMS module descriptor; accept ADR 0011

CHANGELOG.md — 0.8 Added entry for the module-info.java change.
docs/reference.md — spell out the module-path native-access flag
(--enable-native-access=io.github.dfa1.zstd) and add a Module path
section describing the export surface and classpath fallback.
adr/0011-jpms-module-descriptor.md, adr/ADR.md — flip status
Proposed -> Accepted now that the descriptor is implemented.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>